<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <data>
        <variable
            name="loginViewModel"
            type="com.gorilla.attendance.enterprise.ui.login.LoginViewModel"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/scs_page_background"
        tools:context=".ui.login.LoginFragment">

        <include
            android:id="@+id/titleTextView"
            layout="@layout/title_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:subTitle="@{@string/txt_create_account_desc}"
            app:title="@{@string/txt_create_account}" />

        <TextView
            android:id="@+id/adTextView"
            android:text="@string/txt_ad_account"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView"
            style="@style/ScsTextView" />

        <EditText
            android:id="@+id/adEditText"
            android:hint="@string/hint_ad_account"
            android:inputType="textPersonName"
            android:text="@={loginViewModel.adAccount}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/adTextView"
            style="@style/ScsEditText" />

        <TextView
            android:id="@+id/pwTextView"
            android:layout_marginTop="20dp"
            android:text="@string/txt_ad_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/adEditText"
            style="@style/ScsTextView"/>

        <EditText
            android:id="@+id/pwEditText"
            android:hint="@string/hint_ad_pw"
            android:inputType="textPassword"
            android:text="@={loginViewModel.adPassword}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pwTextView"
            style="@style/ScsEditText" />

        <Button
            android:id="@+id/loginBtn"
            style="@style/ScsBottomButton"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="30dp"
            android:text="@string/txt_next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>
</layout>