<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <data>
        <variable
            name="registerViewModel"
            type="com.gorilla.attendance.enterprise.ui.register.PinRegisterViewModel"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/scs_page_background"
        tools:context=".ui.register.PinRegisterFragment">

        <include
            android:id="@+id/titleTextView"
            layout="@layout/title_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:subTitle="@{@string/txt_set_password_desc}"
            app:title="@{@string/txt_set_password}" />

        <TextView
            android:id="@+id/pinTextView"
            android:text="@string/txt_pin_code"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView"
            style="@style/ScsTextView" />

        <EditText
            android:id="@+id/pinEditText"
            android:hint="@string/hint_pin_code"
            android:inputType="textPassword"
            android:text="@={registerViewModel.pinCode}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pinTextView"
            style="@style/ScsEditText" />

        <TextView
            android:id="@+id/emergencyTextView"
            android:layout_marginTop="20dp"
            android:text="@string/txt_emergency_code"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pinEditText"
            style="@style/ScsTextView"/>

        <EditText
            android:id="@+id/emergencyEditText"
            android:hint="@string/hint_emergency_code"
            android:inputType="textPassword"
            android:text="@={registerViewModel.emergencyCode}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emergencyTextView"
            style="@style/ScsEditText" />

        <Button
            android:id="@+id/registerBtn"
            style="@style/ScsBottomButton"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="30dp"
            android:text="@string/txt_next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>
</layout>