<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:background="@color/scs_page_background">

    <TextView
        android:id="@+id/domainTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/msg_domain_set"
        android:textColor="@color/white"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/domainEditText"
        android:hint="@string/hint_domain_set"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:inputType="textUri"
        android:layout_below="@+id/domainTxt"
        style="@style/ScsEditText" />

    <Button
        android:id="@+id/checkBtn"
        style="@style/ScsBottomButton"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="120dp"
        android:text="@string/txt_confirm"
        android:layout_below="@+id/domainEditText" />

</RelativeLayout>