<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <data>
        <variable
            name="motpViewModel"
            type="com.gorilla.attendance.enterprise.ui.motp.MotpViewModel"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/scs_page_background"
        tools:context=".ui.motp.MotpFragment">

        <include
            android:id="@+id/titleTextView"
            layout="@layout/title_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:subTitle="@{@string/txt_get_motp_desc}"
            app:title="@{@string/txt_get_motp}" />

        <TextView
            android:id="@+id/pinTextView"
            style="@style/ScsTextView"
            android:text="@string/txt_pin_code"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

        <EditText
            android:id="@+id/pinEditText"
            style="@style/ScsEditText"
            android:hint="@string/hint_pin_code"
            android:inputType="textPassword"
            android:text="@={motpViewModel.pinCode}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pinTextView" />

        <TextView
            android:id="@+id/failTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/txt_login_fail"
            android:textColor="@color/scs_warning_text"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

        <TextView
            android:id="@+id/failDescTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/txt_please_try_again"
            android:textColor="@color/scs_warning_text"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/failTextView" />

        <FrameLayout
            android:id="@+id/fdrFrame"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="40dp"
            android:background="@color/black"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/failDescTextView" />

        <ImageView
            android:id="@+id/faceImage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="40dp"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/failDescTextView" />

        <android.support.constraint.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="fdrFrame, faceImage" />

        <TextView
            android:id="@+id/fdrTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:textColor="@color/white"
            android:text="@string/txt_face_detecting"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/barrier"/>

        <TextView
            android:id="@+id/motpTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/txt_motp"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

        <TextView
            android:id="@+id/motpResultTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/txt_motp_default"
            android:textColor="@color/white"
            android:textSize="48sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/motpTextView" />

        <Button
            android:id="@+id/confirmPinCodeBtn"
            style="@style/ScsBottomButton"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="30dp"
            android:text="@string/txt_next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/tryAgainShortBtn"
            style="@style/ScsBottomButton"
            android:layout_marginBottom="25dp"
            android:text="@string/txt_try_again"
            app:layout_constraintBottom_toTopOf="@+id/createAdBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/createAdBtn"
            style="@style/ScsBottomButton"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="30dp"
            android:text="@string/txt_create_account"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/tryAgainLongBtn"
            style="@style/ScsBottomButton"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="30dp"
            android:text="@string/txt_try_again"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/doneBtn"
            style="@style/ScsBottomButton"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="30dp"
            android:text="@string/txt_done"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <android.support.constraint.Group
            android:id="@+id/groupEnterPin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="pinEditText,confirmPinCodeBtn,pinTextView" />

        <android.support.constraint.Group
            android:id="@+id/groupUnauthorized"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="tryAgainShortBtn,createAdBtn" />

        <android.support.constraint.Group
            android:id="@+id/groupCantDetect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="tryAgainLongBtn" />

        <android.support.constraint.Group
            android:id="@+id/groupMotpSuccess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="motpTextView,doneBtn,motpResultTextView" />

        <android.support.constraint.Group
            android:id="@+id/groupFaceImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="failDescTextView,failTextView" />

    </android.support.constraint.ConstraintLayout>
</layout>